Added segmentation but on server

--- a/back.ipynb
+++ b/back.ipynb
@@ -201,6 +201,65 @@
    "source": [
     "results[0].names"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now using Node v20.10.0 (npm 10.2.3) ~/.local/share/nvm/v20.10.0/bin/node\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting tflite-support\n",
+      "  Downloading tflite_support-0.4.4-cp310-cp310-manylinux2014_x86_64.whl (60.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m60.8/60.8 MB\u001b[0m \u001b[31m27.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:08\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.20.0 in /home/anuj/.local/lib/python3.10/site-packages (from tflite-support) (1.26.4)\n",
+      "Collecting pybind11>=2.6.0\n",
+      "  Downloading pybind11-2.11.1-py3-none-any.whl (227 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m227.7/227.7 KB\u001b[0m \u001b[31m35.7 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting sounddevice>=0.4.4\n",
+      "  Downloading sounddevice-0.4.6-py3-none-any.whl (31 kB)\n",
+      "Collecting absl-py>=0.7.0\n",
+      "  Downloading absl_py-2.1.0-py3-none-any.whl (133 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.7/133.7 KB\u001b[0m \u001b[31m136.8 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting protobuf<4,>=3.18.0\n",
+      "  Downloading protobuf-3.20.3-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m58.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+      "\u001b[?25hCollecting flatbuffers>=2.0\n",
+      "  Downloading flatbuffers-23.5.26-py2.py3-none-any.whl (26 kB)\n",
+      "Collecting CFFI>=1.0\n",
+      "  Downloading cffi-1.16.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (443 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m443.9/443.9 KB\u001b[0m \u001b[31m28.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting pycparser\n",
+      "  Downloading pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m118.7/118.7 KB\u001b[0m \u001b[31m92.0 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: flatbuffers, pycparser, pybind11, protobuf, absl-py, CFFI, sounddevice, tflite-support\n",
+      "Successfully installed CFFI-1.16.0 absl-py-2.1.0 flatbuffers-23.5.26 protobuf-3.20.3 pybind11-2.11.1 pycparser-2.21 sounddevice-0.4.6 tflite-support-0.4.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tflite-support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tflite-support-nightly"
+   ]
   }
  ],
  "metadata": {
